<resources>
    <string name="app_name">Shedly</string>
    <string name="dialog_name">New event is built here</string>
    <string name="dialog_duration_question">Seven kilometer long?</string>
    <string name="dialog_action_button">Then well fire it up !</string>

    <string name="action_settings">Settings</string>

    <string name="freetime_text">Freetime, tap to find things to do!</string>
    <string name="default_time_label">00:00</string>
    <string name="freetime_label"></string>
    <string name="night_greeting_label">Good night</string>
    <string name="morning_greeting_label">Good Morning</string>
    <string name="eventing_greeting_label">Afternoon</string>
    <string name="evening_greeting_label">Evening</string>
    <string name="replan_label">replan</string>
    <string name="eventbin_label">Appointment list</string>
    <string name="saved_day_message">Got a saved day for you!</string>
    <string name="event_removal_query">Be an angel and chose where to put your event.</string>
    <string name="put_event_query">Be an angel and chose where to put your event.</string>
    <string name="adding_to_replacelist_message">Added it to the replace list.</string>
    <string name="move_down_freetime_query">Please move down the freetime, and try again!</string>
    <string name="exuse_of_fixedtime_placement">Sorry but there wasn\'nt any freetime at that spot. Will implement a fix in future.</string>
    <string name="adding_to_appointment_message">Adding it to the your appointment-list</string>
    <string name="exuse_when_moving_fixedtime">Can\'t move a fixed time.</string>
    <string name="exuse_when_to_big_message">Sorry but it dosent fit there.</string>
    <string name="exuse_for_impossible">Sorry, but thats not possible!</string>
    <string name="exuse_for_clock">"Sorry, but was only time up to "</string>
    <string name="exuse_for_clock_not_moving">Sorry, but was not time for that.</string>
    <string name="removing_event_message">Removing event</string>
    <string name="restore_button_label">restore removed events</string>
    <string name="repeat_textfield">Repeat</string>
    <string name="travel_time_textfield">Travel-time</string>
    <string name="travel_checkbox_label_to">To</string>
    <string name="travel_checkbox_label_from">From</string>
    <string name="duration_textfield">Duration</string>
    <string name="time_textfield">Fixed time</string>
    <string name="time_from_textfield">from</string>
    <string name="time_to_textfield">to</string>
    <string name="name_edit_label">Events Name</string>
    <string name="event_choise_query">Check the things that is part of your everyday life</string>
    <string name="title_activity_event_choosing" translatable="false">EventChoosingActivity</string>
    <string name="long_duration_extra_label">" hours long..."</string>
    <string name="start_event_breakfast">Breakfast</string>
    <string name="start_event_lunch">Lunch</string>
    <string name="start_event_supper">Supper</string>
    <string name="start_event_cleanup">Clean-up</string>
    <string name="start_event_morning_hygiene">Morning hygiene</string>
    <string name="quene_type_label">Events</string>
    <string name="quene_type_label_fixed">Fixed Events</string>
    <string name="new_event_repeate_label">Repete</string>
    <string name="cancel_label">CANCEL</string>
    <string name="new_event_frequency_query">Choose frequency</string>
    <string name="welcome_text">Welcome to Shedly</string>
    <string name="start_event_cooking">Cooking</string>
    <string name="start_event_workout">Workout</string>
    <string name="new_event_tap_to_change">Tap to change</string>
    <string name="start_event_study">Study</string>
    <string name="new_event_color_text">Color</string>
    <string name="new_event_fragmet_frequensy_weekly">Weekly</string>
    <string name="new_event_fragmet_frequensy_bi_weekly">Bi weekly</string>
    <string name="new_event_fragmet_frequensy_monthly">Monthly</string>
    <string name="new_event_fragmet_frequensy_weekdays">Weekdays</string>
    <string name="new_event_fragmet_frequensy_weekends">Weekends</string>
    <string name="new_event_fragmet_frequensy_fourht_week">Every fourth week</string>
    <string name="new_event_fragmet_frequensy_daily">Daily</string>
    <string name="minutes_over_label">Minutes over:</string>
    <string name="minutes_free_label">Minutes free:</string>
    <string name="query_top_label">Re-plan</string>
    <string name="query_bottom_label">Check your completed events.</string>
</resources>
