<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.glenn.hatter.Shedly.ui.EventChoosingActivity">

    <TextView
        android:id="@+id/welcome_text"
        android:text="@string/welcome_text"
        style="@style/blue_headlines"/>

    <TextView
        android:id="@+id/query_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_below="@id/welcome_text"

        android:text="@string/event_choise_query"

        />


    <android.support.v7.widget.RecyclerView
        android:id="@+id/event_recylist"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/query_text"
        android:layout_marginLeft="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />

    <com.getbase.floatingactionbutton.FloatingActionButton
        android:id="@+id/contiue_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        fab:fab_colorNormal="#388E3C"
        fab:fab_title="@string/replan_label"
        fab:fab_colorPressed="#4CAF50"
        fab:fab_icon="@drawable/ic_action_done_pixel"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        />


</RelativeLayout>
